--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -69,3 +69,11 @@ litters_base
 litters_readr
 ```
 
+## Exporting data
+
+Explort the mlb sub-table.
+
+```{r}
+write_csv(mlb_df, "./data/mlb_subtable.csv")
+```
+
