--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -95,3 +95,11 @@ mutate(litters_df,
   group = str_to_lower(group))
 ```
 
+
+## `arrange`
+
+```{r}
+arrange(litters_df, pups_born_alive)
+arrange(litters_df, pups_born_alive, gd0_weight)
+```
+
