--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -103,3 +103,29 @@ lotr_tidy =
 
 ```
 
+## Joining datasets - there should be a key that is common to both data sets that will be used to join.
+
+Import that FAS datasets.
+
+```{r}
+pups_df =
+  read.csv("./data/FAS_pups.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(sex = recode(sex, `1` = "male", `2` = "female"))
+
+litters_df =
+  read_csv("./data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  relocate(litter_number) %>% 
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
+```
+
+Nest up, time to join them! Be explicit about what to join with
+
+```{r}
+fas_df =
+  left_join(pups_df, litters_df, by = "litter_number") %>% 
+  arrange(litter_number) %>% 
+  relocate(litter_number, dose, day_of_tx)
+```
+
